# fastapi-template

./: .dockerignore  .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: python-tests.yml  test-deployment.yml
scripts/: rename_project.py  run_dev_tools.sh  setup_hooks.sh  test_deployment.sh
src/fastapi_template/: __init__.py  __main__.py
src/fastapi_template/api/: __init__.py  main.py  models.py
src/fastapi_template/api/routes/: __init__.py
tests/: __init__.py  conftest.py  test_api.py  test_main.py
