[tool.poetry]
name        = "fastapi_template"
version     = "0.1.0"
description = "FastAPI Template"
authors     = []
readme      = "README.md"
packages    = [{ include = "fastapi_template", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
black  = "^23.3.0"
isort  = "^5.12.0"
flake8 = "^6.0.0"
mypy   = "^1.3.0"
httpx = "^0.25.0"  # For testing FastAPI
pre-commit = "^3.5.0"

[tool.poetry.scripts]
api = "fastapi_template.api.main:start"

[build-system]
requires      = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length    = 160
target-version = ["py38"]

[tool.isort]
profile     = "black"
line_length = 160

[tool.mypy]
python_version           = "3.11"
warn_return_any          = true
warn_unused_configs      = true
disallow_untyped_defs    = true
disallow_incomplete_defs = true
exclude                  = ["tests/"]
implicit_optional        = true
